--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -26,6 +26,12 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+git rm -r --cached .media/**
+git rm -r --cached .backend/media/**
+.backend/media/**
+.backend/media/
+backend/media
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
