--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine": "^5.16.4",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@stomp/stompjs": "^7.0.0",
     "@stripe/react-stripe-js": "^2.8.0",
